force-app/src/objects/EventApi__Speaker_Schedule_Item__c.object
<CustomObject>
    <description>Schedule Item Speakers track the various Sessions and Seminars a Speaker is scheduled to present for a Event.</description>
    <fields>
        <fullName>EventApi__Is_Primary__c</fullName>
        <defaultValue>false</defaultValue>
        <description>When checked, the Speaker is considered the lead or &quot;primary&quot; presenter for the Schedule Item.</description>
        <inlineHelpText>When checked, the Speaker is considered the lead or &quot;primary&quot; presenter for the Schedule Item.</inlineHelpText>
        <label>Is Primary</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EventApi__Role__c</fullName>
        <description>The speaker&apos;s role with respect to the related schedule item.</description>
        <inlineHelpText>The speaker&apos;s role with respect to the related schedule item.</inlineHelpText>
        <label>Role</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Poster Presenter</fullName>
                    <default>true</default>
                    <label>Poster Presenter</label>
                </value>
                <value>
                    <fullName>Keynote Speaker</fullName>
                </value>
                <value>
                    <fullName>Panelist</fullName>
                </value>
                <value>
                    <fullName>Paper Presenter</fullName>
                </value>
                <value>
                    <fullName>Moderator</fullName>
                </value>
                <value>
                    <fullName>Specialist</fullName>
                </value>
                <value>
                    <fullName>Lecturer</fullName>
                </value>
                <value>
                    <fullName>Primary</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>EventApi__Schedule_Item__c</fullName>
        <description>Link to the schedule item.</description>
        <inlineHelpText>Link to the schedule item.</inlineHelpText>
        <label>Schedule Item</label>
        <referenceTo>EventApi__Schedule_Item__c</referenceTo>
        <relationshipLabel>Speakers</relationshipLabel>
        <relationshipName>Speaker_Schedule_Items</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
        <writeRequiresMasterRead>true</writeRequiresMasterRead>
    </fields>
    <fields>
        <fullName>EventApi__Speaker__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Link to the speaker.</description>
        <inlineHelpText>Link to the speaker.</inlineHelpText>
        <label>Speaker</label>
        <referenceTo>EventApi__Speaker__c</referenceTo>
        <relationshipLabel>Schedule</relationshipLabel>
        <relationshipName>Speaker_Schedule_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Speaker Schedule Item</label>
    <nameField>
        <label>Speaker Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Speaker Schedule Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>